BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/KPI_Rep_Call_BMS_CN__c.object
<CustomObject>
    <fields>
        <fullName>Act_Call_BMS_CN__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Act Call</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Call_Freq_BMS_CN__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>Call Freq</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Doctors_Visited_BMS_CN__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Doctors Visited</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dr_Coverage2_BMS_CN__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>Dr Coverage %</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Dr_Coverage_BMS_CN__c</fullName>
        <formula>if(Total_Dr_Num_BMS_CN__c&gt;0,  Doctors_Visited_BMS_CN__c  /  Total_Dr_Num_BMS_CN__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dr Coverage %</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Dr_Level_BMS_CN__c</fullName>
        <label>Dr Level</label>
        <length>300</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Total_Dr_Num_BMS_CN__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Dr Num.</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>KPI Rep Call Summary</label>
    <nameField>
        <displayFormat>KRC-{0000}</displayFormat>
        <label>KRC Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>KPI Rep Call Summary</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>